--- a/src/app/src/main/res/layout/activity_main.xml
+++ b/src/app/src/main/res/layout/activity_main.xml
@@ -13,26 +13,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/plus_button" />
-
-    <Button
-        android:id="@+id/plus_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/minus_button"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/plus" />
-
-    <Button
-        android:id="@+id/minus_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/plus_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/recycler_view"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="@string/minus" />
-
+        app:layout_constraintBottom_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
